intTests/test_type_errors/err011.log.good
Loading file "err011.saw"
Type errors:
  err011.saw:11:11-11:14: Error: Type mismatch.
    Expected: TopLevel
    Found:    LLVMSetup

    Expected: TopLevel (t.0, t.1)
    Found:    LLVMSetup (Int, Int)

  err011.saw:11:1-11:14: Note: The type TopLevel arises from this type annotation
  <type of llvm_assert>:1:9-1:18: Note: The type LLVMSetup arises from this type annotation


FAILED
